# clover

./: .gitignore  CHANGELOG.md  Cakefile  Cargo.toml  Clover.sln  LICENSE  README.md  clover.go  main.coffee  package.json
Clover/: Bytecode.cs  Compiler.cs  Context.cs  Lexer.cs  Parser.cs  Scope.cs  Token.cs
Clover.Tests/: Lexer.cs
Clover/Ast/: Nodes.cs
Clover/Runtime/: Array.cs  Boolean.cs  Float.cs  Frame.cs  Function.cs  Integer.cs  Map.cs  Null.cs  Object.cs  RuntimeError.cs  ScriptClass.cs  String.cs  VirtualMachine.cs
CloverCli/: CloverCli.csproj  Program.cs
CloverCli/examples/: main.luck
CloverStdlib/: CloverStdlib.csproj  Stdlib.cs
ast/: ast.go
cmd/clover/: main.go
crates/clover/: Cargo.toml  README.md
crates/clover-cli/: Cargo.toml  README.md
crates/clover-cli/src/: main.rs
crates/clover-std/: Cargo.toml  README.md
crates/clover-std/src/: helper.rs  io.rs  lib.rs  map.rs  math.rs  random.rs
crates/clover-std/src/io/: mod.rs
crates/clover-std/src/math/: mod.rs  pow.rs  trigonometric.rs
crates/clover/src/: lib.rs  version.rs
crates/clover/src/ast/: file.rs  mod.rs  token.rs
crates/clover/src/backend/: assembly_state.rs  compiler.rs  dependency_solver.rs  function_state.rs  mod.rs
crates/clover/src/compiler/: mod.rs
crates/clover/src/frontend/: lexer.rs  parser.rs
crates/clover/src/parser/: lexer.rs  mod.rs
crates/clover/src/runtime/: assembly.rs  assembly_information.rs  iterator.rs  meta_table.rs  mod.rs  object.rs  object_property.rs  opcode.rs  operation.rs  program.rs  state.rs
crates/clover/tests/: convert.luck  error_handling.luck  for_loop.luck  function.luck  include.luck  integer_operations.luck  local.luck  model.luck
examples/: error_handling.luck  factorial_for_loop.luck  factorial_recursive.luck  first_class_function.luck  for_loop.luck  hello.luck  hello_world.luck  if_else.luck  include.luck  main.luck  math.luck  model.luck  return.luck  test.luck  world.luck
lexer/: lexer.go  lexer_test.go
lib/node/: compiler.coffee  debug.coffee  interpreter.coffee  node.coffee
lib/parser/: grammer.jison  parser.js  token.jisonlex
lib/runtime/: context.coffee  object.coffee  runtime.coffee
parser/: parser.go
runtime/: context.go  object.go  runtime.go
samples/: test.luck
test/: mocha.opts  parser_test.coffee
token/: token.go
