[package]
name = "clover-cli"
version = "0.0.1"
authors = [ "PanPan <ippan829@gmail.com>" ]
license = "MIT"
edition = "2018"
repository = "https://github.com/ippan/clover"
keywords = [ "language", "scripting" ]
description = "A command line interface for Clover."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clover = { path = "../clover" }
