[package]
name = "clover-cli"
version = "0.1.2"
authors = [ "PanPan <ippan829@gmail.com>" ]
license = "MIT"
edition = "2018"
repository = "https://github.com/ippan/clover"
keywords = [ "language", "scripting" ]
description = "A command line interface for Clover."

[[bin]]
name = "clover"
path = "src/main.rs"

[dependencies]
clover = { path = "../clover", version = "0.1.0" }
clover-std = { path = "../clover-std", version = "0.1.0" }
