[package]
name = "clover-std"
version = "0.1.1"
authors = [ "PanPan <ippan829@gmail.com>" ]
license = "MIT"
edition = "2018"
repository = "https://github.com/ippan/clover"
keywords = [ "language", "scripting" ]
readme = "README.md"
description = "A scripting language."

[dependencies]
clover = { path = "../clover", version = "0.1.0" }
rand = "0.8.3"